# cpp-waste-recycling-AndrasKovacs84

./: CMakeLists.txt  README.md  main.cpp
Tests/: test.cpp
include/: BottleCap.h  BottleCapException.h  Dustbin.h  Dustbin9000.h  DustbinContentError.h  DustbinIsFull.h  Garbage.h  MetalGarbage.h  PaperGarbage.h  PlasticGarbage.h
src/: BottleCap.cpp  BottleCapException.cpp  Dustbin.cpp  Dustbin9000.cpp  DustbinContentError.cpp  DustbinIsFull.cpp  Garbage.cpp  MetalGarbage.cpp  PaperGarbage.cpp  PlasticGarbage.cpp
